CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(matrix_multiply_example)

SET( CMAKE_BUILD_TYPE RELEASE )

SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y" )
SET( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -pedantic -DGLIBCXX_DEBUG" )
SET( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}" )

SET( CMAKE_EXPORT_COMPILE_COMMANDS on )

#INCLUDE_DIRECTORIES( )
ADD_EXECUTABLE(bin_matrix_multiply_example main.cpp )

#TARGET_LINK_LIBRARIES( bin_matrix_multiply_example )

